Fixed spacing

--- a/_sass/general.scss
+++ b/_sass/general.scss
@@ -1,5 +1,13 @@
 $switcher-text-light: "💡On";
 $switcher-text-dark: "💡Off";
+$small-screen-breakpoint: 750px;
+$main-padding: 10px;
+
+@mixin small-screen {
+    @media (max-width: $small-screen-breakpoint) {
+        @content
+    }
+}
 
 @mixin max-size {
     width: 100%;
@@ -20,51 +28,15 @@ body {
     line-height: 25px;
 }
 
+a,
+a:visited {
+    color: $link-color;
+}
+
 .container {
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-.headbar {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 10px;
-    margin-top: 30px;
-    margin-bottom: 15px;
-    @include max-size();
-}
-
-.nav-links {
-    display: flex;
-    flex-direction: row;
-
-    li {
-        list-style-type: none;
-        margin-right: 15px;
-    }
-}
-
-#switcher {
-    display: none;
-
-    & ~ label::before {
-        content: $switcher-text-dark;
-        color: $link-color;
-        text-decoration: underline;
-    }
-    
-    
-    &:checked ~ label::before {
-        content: $switcher-text-light;
-    }
-}
-
-
-.sitename {
-    font-size: 24px;
-    font-weight: bold;
 }
 
 .title-bar {
@@ -72,44 +44,13 @@ body {
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    margin-bottom: 30px;
     text-align: left;
-    line-height: 30px;
-}
-
-.feed-button {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
-.rss-icon {
-    width: 24px;
-    height: 24px;
-    margin-right: 5px;
-}
-
-.profile-pic {
-    width: 250px;
-    height: 250px;
-    border-radius: 50%;
-    margin-left: 30px;
-    float: right;
-}
-
-a,
-a:visited {
-    color: $link-color;
-}
-
-footer {
-    font-size: 14px;
-    padding: 15px;
-    text-align: center;
+    margin-top: 10px;
 }
 
 main {
-    padding: 10px;
+    padding: $main-padding;
+    padding-top: 0px;
     text-align: justify;
     @include max-size();
 
@@ -134,20 +75,20 @@ main {
     }
 }
 
-@media (max-width: 600px) {
-    .profile-pic {
-        display: none;
-    }
-
-    .headbar {
-        flex-direction: column;
-
-        nav {
-            margin-top: 10px;
-        }
-    }
-
+@include small-screen {
     main {
         text-align: left;
     }
 }
+
+footer {
+    font-size: 14px;
+    padding: 15px;
+    text-align: center;
+}
+
+@import 'headbar';
+@import 'index';
+@import 'article';
+@import 'code/github';
+@import 'blog';
